# VisualGS

./: .gitignore  PROJECT_STATUS.md  README.md  banner.txt  dataset.csv  main.py  pyproject.toml  run.bat  setup.bat  start.bat  visualgs.bat
health/: healthpacket.py
telemetry/: accept.csv  dataset.csv  load_csv.py  packet.py  plotter.py  reject.csv  serialize.py  stati.py  validate.py
ui/: cli.py  cli2.py  launcher.py
